--- a/prajam.ipynb
+++ b/prajam.ipynb
@@ -121,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA CLEAN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
