--- a/prajam.ipynb
+++ b/prajam.ipynb
@@ -364,13 +364,10 @@
     "import plotly.graph_objects as go\n",
     "import plotly.io as pio\n",
     "\n",
-    "# Définir le rendu par défaut sur le navigateur\n",
     "pio.renderers.default = 'browser'\n",
     "\n",
-    "# Charger les données\n",
     "df = pd.read_csv('https://github.com/PRAJAM/Projet/raw/jules/Export_TER_juin2023_FIX_SafwanChendeb.csv', sep=';')\n",
     "\n",
-    "# Filtrer les données\n",
     "df2 = df.dropna(subset=['ASS_LGBD_KHZ'])\n",
     "df2 = df2[df2[\"ASS_LGBD_KHZ\"] > 1000]\n",
     "enreg_to_supp = df2[df2['MVT_CODE'] == 'SUP']['N° ENREG']\n",
@@ -381,7 +378,6 @@
     "df2['ASS_LGBD_KHZ'] = df2['ASS_LGBD_KHZ'].astype(int)\n",
     "df2['Frequency_Band'] = df2['ASS_FRQ_KHZ'].astype(str) + '_' + df2['ASS_LGBD_KHZ'].astype(str)\n",
     "\n",
-    "# Calculer la fréquence des bandes\n",
     "frequency_counts = df2['Frequency_Band'].value_counts().reset_index()\n",
     "frequency_counts.columns = ['Frequency_Band', 'Count']\n",
     "frequency_counts[['ASS_FRQ_KHZ', 'ASS_LGBD_KHZ']] = frequency_counts['Frequency_Band'].str.split('_', expand=True)\n",
@@ -390,7 +386,6 @@
     "frequency_counts['ASS_FRQ_MHZ'] = frequency_counts['ASS_FRQ_KHZ'] / 1000\n",
     "frequency_counts['ASS_LGBD_MHZ'] = frequency_counts['ASS_LGBD_KHZ'] / 1000\n",
     "\n",
-    "# Créer le graphique\n",
     "fig = go.Figure()\n",
     "\n",
     "colors = ['#636EFA', '#EF553B', '#00CC96', '#AB63FA', '#FFA15A', '#19D3F3', '#FF6692', '#B6E880', '#FF97FF', '#FECB52']\n",
@@ -415,7 +410,6 @@
     "        marker_color=color\n",
     "    ))\n",
     "\n",
-    "# Personnaliser la mise en page\n",
     "fig.update_layout(\n",
     "    title='Histogram of Frequency Bands Usage',\n",
     "    xaxis_title='Frequency (MHz)',\n",
@@ -448,13 +442,10 @@
     "import plotly.express as px\n",
     "import plotly.io as pio\n",
     "\n",
-    "# Définir le rendu par défaut sur le navigateur\n",
     "pio.renderers.default = 'browser'\n",
     "\n",
-    "# Charger les données\n",
     "df = pd.read_csv('https://github.com/PRAJAM/Projet/raw/jules/Export_TER_juin2023_FIX_SafwanChendeb.csv', sep=';')\n",
     "\n",
-    "# Filtrer les données\n",
     "df2 = df.dropna(subset=['ASS_LGBD_KHZ'])\n",
     "df2 = df2[df2[\"ASS_LGBD_KHZ\"] > 1000]\n",
     "enreg_to_supp = df2[df2['MVT_CODE'] == 'SUP']['N° ENREG']\n",
@@ -467,19 +458,15 @@
     "df2['ASS_FRQ_MHZ'] = df2['ASS_FRQ_KHZ'] / 1000\n",
     "df2['ASS_LGBD_MHZ'] = df2['ASS_LGBD_KHZ'] / 1000\n",
     "\n",
-    "# Ajouter une colonne pour la fréquence de fin en MHz\n",
     "df2['END_FRQ_MHZ'] = df2['ASS_FRQ_MHZ'] + df2['ASS_LGBD_MHZ']\n",
     "\n",
-    "# Regrouper les données par année, service (Code CAF) et affectataire (BASE)\n",
     "df2['Year'] = df2['Date CAF'].dt.year\n",
     "grouped = df2.groupby(['Year', 'Code CAF', 'BASE']).agg(\n",
     "    {'ASS_FRQ_MHZ': 'count', 'ASS_LGBD_MHZ': 'sum'}\n",
     ").reset_index()\n",
     "\n",
-    "# Renommer les colonnes pour plus de clarté\n",
     "grouped.columns = ['Year', 'Service', 'Affectataire', 'Num_Bands', 'Total_Bandwidth_MHz']\n",
     "\n",
-    "# Graphique en barres empilées\n",
     "fig_bar = px.bar(\n",
     "    grouped,\n",
     "    x='Year',\n",
@@ -488,14 +475,14 @@
     "    barmode='stack',\n",
     "    hover_data=['Affectataire', 'Num_Bands'],\n",
     "    title='Largeur de Bande Totale par Année et par Service/Affectataire',\n",
-    "    color_discrete_sequence=px.colors.qualitative.Plotly  # Utiliser une séquence de couleurs qualitative\n",
+    "    color_discrete_sequence=px.colors.qualitative.Plotly  \n",
     ")\n",
     "\n",
     "fig_bar.update_layout(\n",
     "    xaxis=dict(tickformat='d'),\n",
     "    yaxis=dict(tickformat=','),\n",
-    "    template='plotly_white',  # Utiliser un fond blanc pour un look plus propre\n",
-    "    title_x=0.5,  # Centrer le titre\n",
+    "    template='plotly_white', \n",
+    "    title_x=0.5, \n",
     "    legend=dict(\n",
     "        title='Service',\n",
     "        orientation='h',\n",
@@ -508,18 +495,17 @@
     "\n",
     "fig_bar.show()\n",
     "\n",
-    "# Graphique en secteurs\n",
     "fig_pie = px.pie(\n",
     "    grouped,\n",
     "    values='Total_Bandwidth_MHz',\n",
     "    names='Service',\n",
     "    title='Répartition de la Largeur de Bande par Service',\n",
-    "    color_discrete_sequence=px.colors.qualitative.Plotly  # Utiliser une séquence de couleurs qualitative\n",
+    "    color_discrete_sequence=px.colors.qualitative.Plotly \n",
     ")\n",
     "\n",
     "fig_pie.update_layout(\n",
-    "    template='plotly_white',  # Utiliser un fond blanc pour un look plus propre\n",
-    "    title_x=0.5  # Centrer le titre\n",
+    "    template='plotly_white',\n",
+    "    title_x=0.5 \n",
     ")\n",
     "\n",
     "fig_pie.show()\n",
@@ -541,13 +527,12 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.cluster import MiniBatchKMeans\n",
-    "# Sélection des colonnes numériques et non numériques\n",
+    "\n",
     "numerical_cols = ['ASS_FRQ_KHZ', 'ASS_LGBD_KHZ',\n",
     "                  'latitude', 'longitude']\n",
-    "categorical_cols = ['Code CAF']  # Exemple de colonnes catégorielles à encoder\n",
+    "categorical_cols = ['Code CAF']  \n",
     "\n",
     "\n",
-    "# Encodage des colonnes catégorielles\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
     "df_encoded = df2.copy()\n",
@@ -555,7 +540,6 @@
     "for col in categorical_cols:\n",
     "    df_encoded[col] = label_encoder.fit_transform(df_encoded[col])\n",
     "\n",
-    "# Normalisation des données\n",
     "scaler = StandardScaler()\n",
     "\n",
     "df_standardized = df_encoded.copy()\n",
@@ -574,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot each column\n",
+    "\n",
     "df_standardized.boxplot(figsize=(12, 8))"
    ]
   },
@@ -591,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#matrice de correlation\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -621,7 +605,6 @@
     "    kmeans.fit(df_standardized)\n",
     "    wcss.append(kmeans.inertia_)\n",
     "\n",
-    "# Tracé du coude (Elbow Method)\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(range(1, 11), wcss, marker='o', linestyle='--')\n",
     "plt.xlabel('Nombre de Clusters')\n",
@@ -639,7 +622,6 @@
     "df_standardized.head()\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "#kmeans\n",
     "kmeans = KMeans(n_clusters=5, random_state=42)\n",
     "kmeans.fit(df_standardized)"
    ]
@@ -650,7 +632,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#boxplot each attribute with clusters\n",
     "df_standardized['cluster'] = kmeans.labels_\n",
     "df_standardized.boxplot(by='cluster', figsize=(12, 8))\n"
    ]
@@ -661,7 +642,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scatter df plotly\n",
     "import plotly.express as px\n",
     "fig = px.scatter(df2, x='Date CAF', y='ASS_FRQ_KHZ', color=\"Code CAF\")\n",
     "\n",
@@ -674,7 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scatter df plotly\n",
+    "\n",
     "import plotly.express as px\n",
     "fig = px.scatter(df2, x='Date CAF', y='ASS_FRQ_KHZ', color=kmeans.labels_)\n",
     "\n",
@@ -695,36 +675,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#knn classification for code caf\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# Define the features and target variables\n",
     "X = df_standardized[['ASS_FRQ_KHZ', 'ASS_LGBD_KHZ', 'longitude', 'latitude', 'Date CAF']]\n",
     "y = df2['Code CAF']\n",
     "\n",
-    "# Split the data into training and testing sets\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train the KNN classifier\n",
     "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the KNN classifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "y_pred = knn.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print('Accuracy:', accuracy)\n",
     "\n",
-    "#f1 score\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
     "print('F1 Score:', f1)\n",
     "\n",
-    "#y_pred against y_test heat\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "confusion = confusion_matrix(y_test, y_pred)\n",
@@ -745,41 +718,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#random forest pour predir la frequence\n",
+    "\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "# Define the features and target variables\n",
     "X = df_standardized[['ASS_LGBD_KHZ', 'longitude', 'latitude', 'Date CAF']]\n",
     "y = df2['ASS_FRQ_KHZ']\n",
     "\n",
-    "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train the Random Forest regressor\n",
     "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the Random Forest regressor\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
     "from sklearn.metrics import mean_squared_error\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "print('Mean Squared Error:', mse)\n",
     "\n",
-    "# Feature importance\n",
     "importances = rf.feature_importances_\n",
     "std = np.std([tree.feature_importances_ for tree in rf.estimators_],\n",
     "             axis=0)\n",
     "indices = np.argsort(importances)[::-1]\n",
     "\n",
-    "# Print feature ranking\n",
     "print(\"Feature ranking:\")\n",
     "\n",
     "for f in range(X.shape[1]):\n",
     "    print(\"%d. feature %d (%f)\" % (f + 1, indices[f], importances[indices[f]]))\n",
     "\n",
-    "# Plot the feature importances\n",
     "from matplotlib import pyplot as plt\n",
     "plt.figure()\n",
     "plt.title(\"Feature importances\")\n",
@@ -789,7 +755,6 @@
     "plt.xlim([-1, X.shape[1]])\n",
     "plt.show()\n",
     "\n",
-    "#plot ypred against y test\n",
     "import matplotlib.pyplot as plt\n",
     "plt.scatter(y_test, y_pred)\n",
     "plt.xlabel('True Values')\n",
